# QuotesSite

./: docker-compose.yaml  pyproject.toml
mongo_data/: WiredTiger.turtle  WiredTiger.wt  _mdb_catalog.wt  collection-0--7776245164197877191.wt  collection-0-6235530122861472590.wt  collection-2--7776245164197877191.wt  collection-2-6235530122861472590.wt  collection-4-6235530122861472590.wt  collection-7-6235530122861472590.wt  index-1--7776245164197877191.wt  index-1-6235530122861472590.wt  index-3--7776245164197877191.wt  index-3-6235530122861472590.wt  index-5-6235530122861472590.wt  index-6-6235530122861472590.wt  index-8-6235530122861472590.wt  index-9-6235530122861472590.wt  sizeStorer.wt
mongo_data/diagnostic.data/: metrics.2024-04-03T09-56-53Z-00000  metrics.2024-04-03T09-57-10Z-00000  metrics.2024-04-03T10-11-20Z-00000  metrics.2024-04-03T11-05-15Z-00000  metrics.2024-04-03T12-50-39Z-00000  metrics.2024-04-03T15-09-22Z-00000  metrics.2024-04-03T17-29-01Z-00000
postgres_data/: postmaster.pid
postgres_data/base/1/: 1259  2619  2619_vm  2696  pg_internal.init
postgres_data/base/5/: 1247  1249  1259  16388  16389  16393  16394  16396  16397  16400  16402  (+104 more)
postgres_data/global/: 1260  pg_control  pg_internal.init
postgres_data/pg_stat/: pgstat.stat
postgres_data/pg_xact/: 0000
quoteapp/: manage.py
quoteapp/quoteapp/: asgi.py  settings.py  urls.py  wsgi.py
quoteapp/quotes/: admin.py  forms.py  models.py  urls.py  views.py
quoteapp/users/: forms.py  urls.py  views.py
quoteapp/utils/: authors.json  main.py  mongo_models.py  quotes.json  tags.json
(+18 files in other folders)
